#3 アクティブメンバー情報を閲覧可能に

--- a/application/views/assets/less/object/_common.less
+++ b/application/views/assets/less/object/_common.less
@@ -26,6 +26,21 @@
 	}
 }
 
+// nijiru_accordion.js
+a.toggle-switch{
+	display: inline-block;
+	background: @njr_l_blue;
+	color: #fff;
+	.card_mixin;
+	.button_mixin();
+	text-decoration: none;
+	margin: 10px 0;
+	padding: 5px;
+	&:hover,
+	&:active{
+		text-decoration: none;
+	}
+}
 
 // ==========================================================================
 // PC
