#6 IRCログの前翌日へのリンクメニュー

--- a/application/views/assets/less/nijiru.less
+++ b/application/views/assets/less/nijiru.less
@@ -23,6 +23,7 @@
 // ==========================================================================
 
 @import "object/_common.less";
+@import "object/_typography.less";
 @import "object/_form.less";
 @import "object/_table.less";
 @import "object/_test.less";
