--- a/application/views/assets/less/object/_form.less
+++ b/application/views/assets/less/object/_form.less
@@ -1,4 +1,39 @@
 // ==========================================================================
+// 共通
+// ==========================================================================
+
+.flat_form {
+	&--search {
+		position: relative;
+		border: solid 1px #ccc;
+		.shadow1;
+		.b_radius(2px);
+
+		&__input{
+			.bxs;
+			display: inline-block;
+			padding: 10px;
+			font-size: 1.3em;
+			border: none;
+			width: 100%;
+		}
+		&__button {
+			.button_mixin();
+			.bxs;
+			border: none;
+			background: @njr_gray;
+			height: 100%;
+			padding: 0 6px;
+			margin: 0;
+
+			position: absolute;
+			top: 0;
+			right: 0;
+		}
+	}
+}
+
+// ==========================================================================
 // PC
 // ==========================================================================
 
@@ -138,9 +173,6 @@
 			}
 
 		}
-
-
-
 	}
 
 }
