--- a/application/views/assets/less/web_apps.less
+++ b/application/views/assets/less/web_apps.less
@@ -71,3 +71,76 @@
 		}
 	}
 }
+
+// ========================================
+// ikrScpEditor
+
+.scp_editor {
+
+	&__wrapper{
+		position: relative;
+		min-height: 100%;
+		text-align: center;
+	}
+
+	&__main{
+		margin: 0 auto;
+		max-width: 800px;
+		text-align: left;
+	}
+
+	&__preview{
+		background: #fff;
+		width: 100%;
+		height: 320px;
+
+		color: #333;
+		font-family: verdana,arial,helvetica,sans-serif;
+		font-size: 0.80em;
+		line-height: 141%;
+
+		// user resize
+		overflow: auto;
+		resize: vertical;
+
+		h1{
+			margin: .7em 0 .6em 0;
+			padding: 0;
+			font-weight: bold;
+			font-family: "Trebuchet MS", Trebuchet, Verdana, Arial, Helvetica;
+			font-size: 190%;
+			color: #901;
+		}
+		blockquote {
+			border: 1px dashed #999;
+			padding: 0 1em;
+			background-color: #f4f4f4;
+		}
+	}
+
+	&__textarea{
+		// wikidot
+		font-family: verdana,arial,helvetica,sans-serif;
+		padding: 2px;
+		font-size: 100%;
+		border: 1px solid #777;
+		background-color: #FFF;
+		color: #000;
+
+		// user resize
+		overflow: auto;
+		resize: vertical;
+
+		// original
+		cursor: text;
+		white-space: pre-wrap;
+		word-wrap: break-word;
+		width: 100%;
+		height: 320px;
+
+		//node
+		div{
+			margin: 0;
+		}
+	}
+}
