--- a/application/views/assets/less/web_apps.less
+++ b/application/views/assets/less/web_apps.less
@@ -213,6 +213,54 @@ body.ikr_scp_editor{
 			vertical-align: sub;
 			font-size: smaller;
 		}
+
+		// VoteBox
+		.page-rate-widget-box {
+			display: inline-block;
+			border-radius: 5px;
+			box-shadow: 1px 1px 3px rgba(0,0,0,.5);
+			margin-bottom: 10px;
+			margin-right: 2em;
+			a {
+				text-decoration: none;
+				color: #000;
+				background-color: #DDD;
+				padding: 0 5px;
+			}
+			.rate-points {
+				color: #FFF;
+				font-weight: bold;
+				padding: 0 10px;
+				background-color: #633;
+				border: solid 1px #633;
+				border-right: 0;
+				border-radius: 5px 0 0 5px;
+			}
+			.rateup,
+			.ratedown {
+				background-color: #fff6f0;
+				border-top: solid 1px #633;
+				border-bottom: solid 1px #633;
+				font-weight: bold;
+				a {
+					background: transparent;
+					color: #633;
+					padding: 0 4px;
+					margin: 0 1px;
+				}
+			}
+			.cancel {
+				background-color: #633;
+				border: solid 1px #633;
+				border-left: 0;
+				border-radius: 0 5px 5px 0;
+				a {
+					background: transparent;
+					text-transform: uppercase;
+					color: #966;
+				}
+			}
+		}
 	}
 
 	&__textarea{
