フォーラムで使う絵チャ__WebAppsへの移行

--- a/application/views/assets/less/web_apps.less
+++ b/application/views/assets/less/web_apps.less
@@ -71,3 +71,52 @@
 		}
 	}
 }
+
+// 絵チャ
+
+.foundation_wb{
+
+	//body
+	margin: 0;
+	background: @clr_white;
+
+	.canvas-wrap {
+		width: 550px;
+		height: 550px;
+	}
+
+
+	canvas {
+		top: 20px;
+		left: 20px;
+		border: 5px solid #ccc;
+	}
+
+	#button {
+		position: relative;
+		top: -55px;
+		left: 260px;
+	}
+
+	.buttons {
+		font-size: 120%;
+		width: 80px;
+		height: 50px;
+	}
+
+	ul {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+	}
+
+	li {
+		cursor: pointer;
+		cursor: hand;
+		display: inline-block;
+		border: 1px solid #000;
+		width: 50px;
+		height: 50px;
+	}
+
+}
