フォーラムで使う絵チャ__スタイル調整のなかば

--- a/application/views/assets/less/web_apps.less
+++ b/application/views/assets/less/web_apps.less
@@ -13,110 +13,8 @@
 // ========================================
 // SCP-Search
 
-.scp_search{
-
-	&__wrapper{
-		position: relative;
-		min-height: 100%;
-		text-align: center;
-	}
-
-	&__form {
-		.hidden();
-	}
-
-	&__number-display{
-		.card_mixin();
-		.fz(24);
-		padding: 20px;
-		margin: 20px;
-		background: @web-apps-blue-deep;
-		//.hidden;
-	}
-
-	&__table {
-		&-wrapper{
-			width: 100%;
-			position: absolute;
-			bottom: 0;
-		}
-		width: 100%;
-		border-collapse: separate;
-		border-spacing: 5px;
-		margin-top: 0;
-		table-layout: fixed;
-		&-tr{
-			height: 60px;
-		}
-		&-th{
-
-		}
-		&-td{
-			.button {
-				.button_mixin();
-				text-align: center;
-				height: 60px;
-				line-height: 60px;
-				background: #C5C3C6;
-				color: @njr_txt;
-				&--go{
-					color: @web-apps-white;
-					background: @web-apps-blue;
-				}
-				&--clear{
-					color: @web-apps-white;
-					background: @web-apps-blue-deep;
-				}
-			}
-		}
-	}
-}
+@import "object/webapps/scp_search";
 
 // 絵チャ
 
-.foundation_wb{
-
-	//body
-	margin: 0;
-	background: @clr_white;
-
-	.canvas-wrap {
-		width: 550px;
-		height: 550px;
-	}
-
-
-	canvas {
-		top: 20px;
-		left: 20px;
-		border: 5px solid #ccc;
-	}
-
-	#button {
-		position: relative;
-		top: -55px;
-		left: 260px;
-	}
-
-	.buttons {
-		font-size: 120%;
-		width: 80px;
-		height: 50px;
-	}
-
-	ul {
-		margin: 0;
-		padding: 0;
-		list-style: none;
-	}
-
-	li {
-		cursor: pointer;
-		cursor: hand;
-		display: inline-block;
-		border: 1px solid #000;
-		width: 50px;
-		height: 50px;
-	}
-
-}
+@import "object/webapps/foundation_wb";
