--- a/application/views/assets/less/object/webapps/foundation_wb.less
+++ b/application/views/assets/less/object/webapps/foundation_wb.less
@@ -3,9 +3,10 @@
 	//body
 	margin: 0;
 	background: @clr_white;
+	letter-spacing: 0;
 
 	.canvas-wrap {
-		height: 550px;
+		height: 500px;
 	}
 
 	.canvas {
@@ -14,33 +15,63 @@
 		height: 400px;
 		//top: 20px;
 		//left: 20px;
-		border: 5px solid #ccc;
+		border: 5px solid @njr_gray_dark;
 	}
 
 	.controllers {
 
+		.bxs;
+
 		overflow: hidden;
 		width: 510px;
+		height: 90px;
+		padding: 4px;
+		border: 1px solid @njr_gray_dark;
 
-		//display: flex;
-		//justify-content: flex-start;
-		//align-items: flex-start;
-		//flex-wrap: wrap;
+		display: flex;
+		justify-content: flex-start;
+		align-items: flex-start;
+		flex-wrap: wrap;
+
+		// ツールラッパー
+		&__pen-tools,
+		&__load-tools{
+			.bxs;
+			//display: inline-block;
+			height: 80px;
+			padding: 5px;
+		}
 
 		&__pen-tools{
-			display: inline-block;
 		}
-		&__pen-color-ul{
+		&__load-tools{
+			.bxs;
+			height: 80px;
+			padding: 5px;
+		}
+
+		// ペンカラーバー
+		&__pen-color-ul,
+		&__pen-size-div,
+		&__load-buttons-div{
+			.bxs;
 			margin: 0;
 			padding: 0;
 			list-style: none;
+			font-size: 0; // 隙間の削除
+			width: 240px;
 		}
+
+
+		// ペンカラー
 		&__pen-color {
+			.bxs;
+			//display: table-cell;
 			cursor: hand;
 			display: inline-block;
-			border: 1px solid #000;
-			width: 50px;
-			height: 50px;
+			border: 1px solid @njr_gray_dark;
+			width: 60px;
+			height: 40px;
 
 			.button_mixin();
 
@@ -57,38 +88,56 @@
 				background-color: #fff;
 			}
 		}
-		&__pen-size-div{
 
-		}
-		&__pen-size{
+		// ペンサイズ
+		// ロードボタン
+		&__pen-size,
+		&__load-buttons {
+			.bxs;
 			.button_mixin();
-			border: 1px solid #999;
+			border: 1px solid @njr_gray_dark;
+			width: 80px;
+			height: 30px;
 			&--s{}
 			&--m{}
 			&--l{}
 		}
 
-		&__load-tools{
-			//position: relative;
-			//top: -70px;
-			//left: 250px;
-			display: inline-block;
-			//width: 200px;
-			margin-bottom: 10px;
+		&__pen-size{
+			&--s{}
+			&--m{}
+			&--l{}
 		}
-		&__load-pass{
 
-		}
-		&__load-buttons {
-			.button_mixin();
-			border: 1px solid #999;
-			font-size: 120%;
-			width: 50px;
-			height: 30px;
+		// パスワード
+		&__load-pass{
+			.bxs;
+			display: block;
+			width: 240px;
+			height: 20px;
+			&-label{
+				.bxs;
+				display: block;
+				margin: 0;
+				padding: 0;
+				line-height: 20px;
+			}
 		}
 	}
 }
 
-@media screen and (max-width: 768px) {
 
+// 幅が狭くなったら、編集できないようにする
+@media screen and (max-width: 510px) {
+
+	.foundation_wb {
+
+		.canvas {
+			width: 95%;
+			height: auto;
+		}
+		.controllers {
+			.hidden;
+		}
+	}
 }
